# tiny-daw

./: .clang-tidy  CMakeLists.txt  README.md
src/: AudioTrackComponent.h  Main.cpp  MainComponent.h  Thumbnail.h  Utils.h
